--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<h1>hello</h1>
+<!doctype html>
+<html lang="en">
+	<head>
+		<!--Import Google Icon Font-->
+	  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	  	<!--Import materialize.css-->
+	 	 <link type="text/css" rel="stylesheet" href="asset/css/materialize.min.css"  media="screen,projection"/>
+
+	  	<!--Let browser know website is optimized for mobile-->
+	  	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	</head>
+	<body>
+  		<?php
+			//echo "\$_GET : <pre>"; print_r($_GET); echo "</pre>";
+			echo "<font color=white>Vous allez ";
+			if (isset($_GET['page'])) echo $_GET['page'];
+			echo "</font>\n";
+			//var_dump($_GET);
+			if (isset($_GET['page']) && is_file('controleurs/'.$_GET['page'].'.php')){
+				include 'controleurs/'.$_GET['page'].'.php';
+			}
+			else{
+				include 'controleurs/ctrl_accueil.php';
+			}
+		?>
+
+    
+	    <!--JavaScript at end of body for optimized loading-->
+	     <script type="text/javascript" src="js/materialize.min.js"></script>
+  	</body>
+</html>
